src/ros2_ws/log/build_2024-02-21_14-16-36/pixpubsub/stderr.log
  File "/src/ros2_ws/install/pixpubsub/lib/python3.10/site-packages/pixpubsub/justmove_sub.py", line 30
    priority[] = 
             ^
SyntaxError: invalid syntax

